gustav: fix layout bug

--- a/gustav/gustav.css
+++ b/gustav/gustav.css
@@ -599,7 +599,6 @@ div.category ul {
 
 	div.whole-content {
 		width: 95%;
-		text-align: center;
 		margin-left: auto;
 		margin-right: auto;
 	}
